translation-tool/inputs/source_meta/objects/Common_TableAction__c.object
<CustomObject>
    <fields>
        <fullName>APINameOfLink__c</fullName>
        <label>APINameOfLink</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Button_Display_Column_Values__c</fullName>
        <label>Action Button Display Column Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Button_Display_Criteria_Column__c</fullName>
        <label>Action Button Display Criteria Column</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Button_Ext_Display_Column_Values__c</fullName>
        <label>Action Button Ext Display Column Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Button_External_Display_Criteria__c</fullName>
        <label>Action Button External Display Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Permissions__c</fullName>
        <label>Custom Permissions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Confirmation_Popup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Confirmation Popup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DynamicParams__c</fullName>
        <label>DynamicParams</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnableAsLink__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EnableAsLink</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Pop_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open In New Window</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Absolute_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Absolute URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Remote_Action_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Remote Action Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remote_Action_Class__c</fullName>
        <label>Remote Action Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remote_Action_Method__c</fullName>
        <label>Remote Action Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Window__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open In Same Window</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Common TableAction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Common TableAction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Common TableActions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>